exploring pattern for java intercenptors